--- a/app/pom.xml
+++ b/app/pom.xml
@@ -21,13 +21,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.isisaddons.app</groupId>
-        <artifactId>quickstart</artifactId>
+        <groupId>org.incode.app</groupId>
+        <artifactId>contactapp</artifactId>
         <version>1.11.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quickstart-app</artifactId>
-    <name>Isis Addons quickstart Application</name>
+    <artifactId>contactapp-app</artifactId>
+    <name>Incode ContactApp Application</name>
 
     <build>
         <resources>
@@ -52,7 +52,7 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>quickstart-fixture</artifactId>
+            <artifactId>contactapp-fixture</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.isis.core</groupId>
