--- a/canonical/pom.xml
+++ b/canonical/pom.xml
@@ -21,13 +21,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.isisaddons.app</groupId>
-        <artifactId>quickstart</artifactId>
+        <groupId>org.incode.app</groupId>
+        <artifactId>contactapp</artifactId>
         <version>1.11.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quickstart-canonical</artifactId>
-    <name>Isis Addons quickstart Canonical Data</name>
+    <artifactId>contactapp-canonical</artifactId>
+    <name>Incode ContactApp Canonical Data</name>
 
 
     <build>
