--- a/integtests/pom.xml
+++ b/integtests/pom.xml
@@ -22,13 +22,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.isisaddons.app</groupId>
-        <artifactId>quickstart</artifactId>
+        <groupId>org.incode.app</groupId>
+        <artifactId>contactapp</artifactId>
         <version>1.11.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quickstart-integtests</artifactId>
-    <name>Isis Addons quickstart Integration Tests</name>
+    <artifactId>contactapp-integtests</artifactId>
+    <name>Incode ContactApp Integration Tests</name>
 
     <build>
         <testResources>
@@ -54,7 +54,7 @@
         <!-- other modules in this project -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>quickstart-app</artifactId>
+            <artifactId>contactapp-app</artifactId>
         </dependency>
 
         <dependency>
