--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -20,13 +20,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.isisaddons.app</groupId>
-        <artifactId>quickstart</artifactId>
+        <groupId>org.incode.app</groupId>
+        <artifactId>contactapp</artifactId>
         <version>1.11.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quickstart-webapp</artifactId>
-    <name>Isis Addons quickstart Webapp</name>
+    <artifactId>contactapp-webapp</artifactId>
+    <name>Incode ContactApp Webapp</name>
 
     <description>This module runs both the Wicket viewer and the Restfulobjects viewer in a single webapp configured to run using the datanucleus object store.  It combines a number of the Isis addons.</description>
 
@@ -140,7 +140,7 @@
     
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>quickstart-app</artifactId>
+            <artifactId>contactapp-app</artifactId>
         </dependency>
         
         <!-- other isis components -->
