frontend documentRoot now changed from frontend/www to backend.... so can run up the backend and hit localhost:8080/frontend/index.html.  Also run "ionic serve" so that the gulp task will continually publish new changes etc as made.

--- a/frontend/ionic.project
+++ b/frontend/ionic.project
@@ -6,8 +6,9 @@
     "compile",
     "watch"
   ],
+  "documentRoot": "../backend/webapp/src/main/webapp/frontend",
   "watchPatterns": [
-    "www/**/*",
-    "!www/lib/**/*"
+    "../backend/webapp/src/main/webapp/frontend/**/*",
+    "!../backend/webapp/src/main/webapp/frontend/lib/**/*"
   ]
 }
