--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -3,5 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.0"
+  },
+  "dependencies": {
+    "angular-http-auth": "~1.2.3"
   }
 }
