Using proxies rather than hard-coding server.

--- a/frontend/ionic.project
+++ b/frontend/ionic.project
@@ -10,5 +10,11 @@
   "watchPatterns": [
     "www/**/*",
     "!www/lib/**/*"
+  ],
+  "proxies": [
+    {
+      "path": "/restful",
+      "proxyUrl": "http://localhost:8080/restful"
+    }
   ]
 }
