Now working for both localhost:8080 and also localhost:8100 (ie using ionic serve --lab).

--- a/backend/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/backend/webapp/src/main/webapp/WEB-INF/web.xml
@@ -39,7 +39,7 @@
         <filter-class>org.ebaysf.web.cors.CORSFilter</filter-class>
         <init-param>
             <param-name>cors.allowed.origins</param-name>
-            <param-value>http://localhost:8100</param-value>
+            <param-value>*</param-value>
         </init-param>
         <init-param>
             <param-name>cors.allowed.headers</param-name>
