--- a/backend/app/pom.xml
+++ b/backend/app/pom.xml
@@ -325,6 +325,21 @@
             <dependencies>
             </dependencies>
         </profile>
+        <profile>
+            <id>lombok</id>
+            <activation>
+                <property>
+                    <name>!skip.lombok</name>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+        </profile>
     </profiles>
 
 
