Fixing build so can deploy to tomcat.  Also:
- changing version number to 0.1.0-SNAPSHOT
- hardcode built artifact name to "contacts.war"
- ignore datanucleus.log for git
- allow build from root pom
- removed jrebel profile

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>org.incode.app</groupId>
     <artifactId>contactapp</artifactId>
-    <version>1.11.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
 
     <name>Incode ContactApp</name>
 
@@ -71,6 +71,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <warName>contacts</warName>
     </properties>
 
     <repositories>
