--- a/backend/webapp/pom.xml
+++ b/backend/webapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.incode.app</groupId>
         <artifactId>contactapp</artifactId>
-        <version>1.11.0-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>contactapp-webapp</artifactId>
@@ -50,7 +50,7 @@
                         </goals>
                         <configuration>
                             <backgroundImage>${basedir}/src/main/jettyconsole/isis-banner.png</backgroundImage>
-                            <destinationFile>${project.build.directory}/${project.build.finalName}-jetty-console.jar</destinationFile>
+                            <destinationFile>${project.build.directory}/${warName}-jetty-console.jar</destinationFile>
                         </configuration>
                         <phase>package</phase>
                     </execution>
@@ -74,7 +74,7 @@
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    <warName>quickstart</warName>
+                    <warName>${warName}</warName>
                     <archive>
                         <manifest>
                             <addClasspath>false</addClasspath>
@@ -137,7 +137,6 @@
     </build>
 
     <dependencies>
-    
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>contactapp-app</artifactId>
@@ -172,15 +171,6 @@
             <groupId>org.isisaddons.metamodel.paraname8</groupId>
             <artifactId>isis-metamodel-paraname8-dom</artifactId>
         </dependency>
-
-        <!-- to run using WebServer (optional) -->
-        <dependency>
-            <groupId>org.apache.isis.core</groupId>
-            <artifactId>isis-core-webserver</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-
 
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
@@ -283,82 +273,27 @@
                 </property>
             </activation>
             <dependencies>
+
+                <dependency>
+                    <groupId>org.apache.isis.core</groupId>
+                    <artifactId>isis-core-webserver</artifactId>
+                    <scope>runtime</scope>
+                    <optional>true</optional>
+                </dependency>
+
                 <dependency>
                     <groupId>org.apache.geronimo.specs</groupId>
                     <artifactId>geronimo-servlet_3.0_spec</artifactId>
-                    <!--
-                    Use 'compile' so can run o.a.i.WebServer from within IntelliJ;
-                    can rely on servlet container to ignore this in war file
-                    -->
                     <scope>compile</scope>
                 </dependency>
+
             </dependencies>
         </profile>
 
         <profile>
-            <id>jrebel</id>
-            <properties>
-                <!-- as used in the rebel.xml in the dom project -->
-                <target.dir>target</target.dir>
-                <isis-jrebel-plugin.packagePrefix>domainapp.dom,org.apache.isis.objectstore.jdo.applib</isis-jrebel-plugin.packagePrefix>
-                <isis-jrebel-plugin.loggingLevel>warn</isis-jrebel-plugin.loggingLevel>
-            </properties>
-            <build>
-                <plugins>
-                    <!--
-                    mvn -P jrebel antrun:run \
-                        -Djrebel.jar="C:/Users/Dan/.IdeaIC13/config/plugins/jr-ide-idea/lib/jrebel/jrebel.jar" \
-                        -Disis_jrebel_plugin.jar="C:/github/danhaywood/isis-jrebel-plugin/target/danhaywood-isis-jrebel-plugin-1.0.0-SNAPSHOT.jar"
-                    -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <configuration>
-                            <target>
-                                <property name="compile_classpath" refid="maven.compile.classpath"/>
-                                <property name="runtime_classpath" refid="maven.runtime.classpath"/>
-                                <property name="test_classpath" refid="maven.test.classpath"/>
-                                <property name="plugin_classpath" refid="maven.plugin.classpath"/>
-
-                                <echo message=""/>
-                                <echo message=""/>
-                                <echo message="jrebel.jar             = ${jrebel.jar}"/>
-                                <echo message="isis_jrebel_plugin.jar = ${isis_jrebel_plugin.jar}"/>
-                                <echo message="target.dir             = ${target.dir}"/>
-                                <echo message=""/>
-                                <echo message=""/>
-
-                                <exec executable="java" failonerror="true">
-                                    <arg value="-javaagent:${jrebel.jar}"/>
-                                    <arg value="-Drebel.log=false"/>
-                                    <arg value="-Drebel.check_class_hash=true"/>
-                                    <arg value="-Drebel.packages_exclude=org.apache.isis"/>
-
-                                    <!-- as used in the rebel.xml in the dom project -->
-                                    <arg value="-Dproject.root=${project.basedir}/.."/>
-                                    <arg value="-Dtarget.dir=${target.dir}"/>
-
-                                    <arg value="-Drebel.plugins=${isis_jrebel_plugin.jar}"/>
-                                    <arg value="-Disis-jrebel-plugin.packagePrefix=${isis-jrebel-plugin.packagePrefix}"/>
-                                    <arg value="-Disis-jrebel-plugin.loggingLevel=${isis-jrebel-plugin.loggingLevel}"/>
-                                    <arg value="-XX:MaxPermSize=128m"/>
-                                    <arg value="-classpath"/>
-                                    <arg value="${runtime_classpath}"/>
-                                    <arg value="org.apache.isis.WebServer"/>
-                                </exec>
-                            </target>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>sqlserver</id>
             <activation>
                 <property>
-<!--
-                    <name>!skip.sqlserver</name>
--->
                     <name>sqlserver</name>
                 </property>
             </activation>
@@ -376,18 +311,6 @@
                     <version>4.0</version>
                 </dependency>
             </dependencies>
-        </profile>
-
-        <profile>
-            <id>m2e</id>
-            <activation>
-                <property>
-                    <name>m2e.version</name>
-                </property>
-            </activation>
-            <build>
-                <directory>target-ide</directory>
-            </build>
         </profile>
     </profiles>
 
