--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
 
     <groupId>org.incode.app</groupId>
     <artifactId>contactapp-parent</artifactId>
-    <version>1.11.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <modules>
         <module>backend</module>
