--- a/backend/webapp/pom.xml
+++ b/backend/webapp/pom.xml
@@ -32,29 +32,12 @@
 
     <packaging>war</packaging>
 
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
-            </plugin>
-
-            <!-- mvn package -->
-            <plugin>
-                <groupId>org.simplericity.jettyconsole</groupId>
-                <artifactId>jetty-console-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>createconsole</goal>
-                        </goals>
-                        <configuration>
-                            <backgroundImage>${basedir}/src/main/jettyconsole/isis-banner.png</backgroundImage>
-                            <destinationFile>${project.build.directory}/${warName}-jetty-console.jar</destinationFile>
-                        </configuration>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
@@ -241,6 +224,35 @@
                     <artifactId>togglz-console</artifactId>
                 </dependency>
             </dependencies>
+        </profile>
+
+        <profile>
+            <id>jetty-console-war</id>
+            <activation>
+                <property>
+                    <name>jetty-console-war</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.simplericity.jettyconsole</groupId>
+                        <artifactId>jetty-console-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>createconsole</goal>
+                                </goals>
+                                <configuration>
+                                    <backgroundImage>${basedir}/src/main/jettyconsole/isis-banner.png</backgroundImage>
+                                    <destinationFile>${project.build.directory}/${warName}-jetty-console.jar</destinationFile>
+                                </configuration>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <profile>
