--- a/backend/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/backend/webapp/src/main/webapp/WEB-INF/web.xml
@@ -309,7 +309,7 @@
         <init-param>
             <!-- what to do if no session was found; we simply return a 401 (a basic authentication challenge causes browser to populate) -->
             <param-name>whenNoSession</param-name>
-            <param-value>unauthorized</param-value>
+            <param-value>auto</param-value>
         </init-param>
         <init-param>
             <param-name>passThru</param-name>
