--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -2,7 +2,8 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.1.0"
+    "ionic": "driftyco/ionic-bower#1.1.0",
+    "ionic-platform-web-client": "~0.2.1"
   },
   "dependencies": {
     "angular-http-auth": "~1.2.3"
