--- a/backend/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/backend/webapp/src/main/webapp/WEB-INF/web.xml
@@ -248,7 +248,7 @@
     </filter>
     <filter-mapping>
         <filter-name>WicketFilter</filter-name>
-        <url-pattern>/wicket/*</url-pattern>
+        <url-pattern>/admin/*</url-pattern>
     </filter-mapping>
 
 
