--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -41,7 +41,7 @@
         <isis-module-audit.version>1.11.0</isis-module-audit.version>
         <isis-module-command.version>1.11.0</isis-module-command.version>
         <isis-module-docx.version>1.11.0</isis-module-docx.version>
-        <isis-module-excel.version>1.12.0-SNAPSHOT</isis-module-excel.version>
+        <isis-module-excel.version>1.11.0</isis-module-excel.version>
         <isis-module-fakedata.version>1.11.0</isis-module-fakedata.version>
         <isis-module-poly.version>1.11.0</isis-module-poly.version>
         <isis-module-publishing.version>1.11.0</isis-module-publishing.version>
