--- a/backend/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/backend/webapp/src/main/webapp/WEB-INF/web.xml
@@ -24,14 +24,9 @@
     <display-name>Contact App</display-name>
 
 
-    <servlet>
-        <servlet-name>RedirectToMobileLoginPage</servlet-name>
-        <servlet-class>org.incode.eurocommercial.contactapp.webapp.servlets.RedirectToMobileLoginPage</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>RedirectToMobileLoginPage</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 
 
     <!-- shiro security configuration -->
