ELI-81: review comments from Kate.
DONE, AND (INFORMALLY) TESTED:

validation on ContactNumber: +[0-9][0-9][ ]([(]?[0-9]+[)]?)?[0-9 ]+
add a create/delete button for Contact
add enum for contact number type.
specify lengths for strings
add notes on ContactNumber
role name should be optional when add role to contact
role name should be optional when edit contact role
add a create/delete button for ContactGroup

DONE, BUT STILL TO TEST

ContactGroup#delete should be areYouSure
ContactGroup#delete should be disabled if any associated contacts

provide the ability to add contacts to groups
- autoComplete of contact name not working

STILL TO DO

when add contact number, restrict the contact number types to those not present.
when edit contact number, restrict types to those not present
when edit a contact role, provide drop-down of existing roles or option to add new one.

move contactGroup# add/remove buttons for contact to table

move edit button for roles to the panel
ContactNumber#notes action param needs layout hint

add a create/delete button for ContactNumber
add a create/delete button for ContactRole

add metadata property group and associate the "downoad JDO metadata" action:
- for contact
- for contactgroup
- for contactnumber
- for contactrole

copyright notices in all
- .java
- pom.xml

ALSO STILL TO DO (from conference call with Kate/Jeroen/Rosco):

- multiple numbers per contact type
- make role mandatory, default being "Eurocommercial" (nb: update spreadsheet with this)
- allow new contact types to be specified, similar to roles
  - that means reverting use of ContactNumber#Type, no longer an enum, just a string again
- data cleanup, sort out Securitas (Security Post)
- remove the ContactNumber#notes, no need after all

NICE TO HAVEs:

- bulk add of contacts to group
- bulk delete of contacts to group

TO DO FOR FRONT-END APP:

- show the address of a contact group

--- a/backend/dom/pom.xml
+++ b/backend/dom/pom.xml
@@ -258,7 +258,13 @@
                     <name>!skip.isisaddons-module-fakedata</name>
                 </property>
             </activation>
-            <!-- for use by fixtures, not dom classes -->
+            <dependencies>
+                <dependency>
+                    <groupId>org.isisaddons.module.fakedata</groupId>
+                    <artifactId>isis-module-fakedata-dom</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>isisaddons-module-poly</id>
