ELI-81: further changes (still to test, though)
seed "Global" country.

ContactGroup#removeContactNumber, when last one, IOOBE

for ContactGroup, show the roles rather than the contacts.
- ContactGroup#contactRoles, change label to "Role of Contacts"

Contact#contactRoles, change label to "Role in Groups"

ContactRole#edit
- doesn't have existingRole/newRole
- validate if both existingRole/newRole specified

ContactGroup#addContactRole
... no need to select existing role from list, can simply enter as 'new' role
... use newRole in preference to existing if both specified.
... validate if both existingRole/newRole specified

change "existingRole" to just "role"
change "existingType" to just "type"

ContactGroup#addContactRole

if HomePageViewModel#deleteGroup, if only one, then default

Contact#addRole
- use StringUtil.firstNonEmpty for role/newRole

ContactGroup#addRole
- use StringUtil.firstNonEmpty for role/newRole

when add a contact to a group, should exclude any contacts that already have a role in the group
when add a contact group to a contact, should exclude any groups that the contact already has a role for

when edit contact number, allow the type to be changed.
when edit a contact role, provide drop-down of existing roles or option to add new one.

make Country#contactGroups into a contributed collection

move contactGroup# add/remove buttons for contact to table

remove ContactNumber#notes

add a create/delete button for ContactNumber

add a create/delete button for ContactRole

- make role mandatory, default being "Eurocommercial" (nb: update spreadsheet with this)
  - role name should be mandatory when add role to contact
  - role name should be mandatory when edit contact role

icon for 'edit'

ContactNumber#create from ContactNumber
ContactNumber#delete from ContactNumber

--- a/backend/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/backend/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -83,13 +83,18 @@ isis.reflector.validator.allowDeprecated=false
 #
 
 isis.reflector.facet.cssClassFa.patterns=\
-                        new.*:fa-plus,\
+                        new.*:fa-file-o,\
+                        create.*:fa-file-o,\
+                        also.*:fa-file-o,\
+                        \
                         add.*:fa-plus-square,\
-                        create.*:fa-plus,\
-                        update.*:fa-edit,\
-                        change.*:fa-edit,\
-                        delete.*:fa-trash,\
                         remove.*:fa-minus-square,\
+                        \
+                        update.*:fa-edit,\
+                        edit.*:fa-edit, \
+                        change.*:fa-edit,\
+                        \
+                        delete.*:fa-trash,\
                         move.*:fa-exchange,\
                         first.*:fa-star,\
                         find.*:fa-search,\
