ELI-81: further fixes (these not yet tested)
ContactNumber#remove -> ContactNumber#delete
ContacTNumber#create, should return the new number

also in group, should return the new role
also with contact, should return the new role

ContactManager#addRole - choices of contact

Country#contactGroups - show as contributed collection

ContactRole#title
ContactNumber#title

ContactRole#edit
- existingRole/newRole ... both marked as mandatory
- validate if both existingRole/newRole specified

--- a/backend/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/backend/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -119,8 +119,11 @@ isis.reflector.facet.cssClassFa.patterns=\
 #
 
 isis.reflector.facet.cssClass.patterns=\
-                        delete.*:btn-warning,\
-                        .*:btn-default
+                        new.*:btn-success,\
+                        create.*:btn-success,\
+                        also.*:btn-success,\
+                        edit.*:btn-primary,\
+                        delete.*:btn-danger
 
 
 
