--- a/backend/dom/pom.xml
+++ b/backend/dom/pom.xml
@@ -59,6 +59,11 @@
 
         <dependency>
             <groupId>org.apache.isis.core</groupId>
+            <artifactId>isis-core-webserver</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.isis.core</groupId>
             <artifactId>isis-core-unittestsupport</artifactId>
             <scope>test</scope>
         </dependency>
