--- a/backend/dom/pom.xml
+++ b/backend/dom/pom.xml
@@ -80,7 +80,11 @@
             <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
 
     </dependencies>
 
