ELI-136: deleting of commented-out tests that no longer apply.
Also:
- adding a name element to the root pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
     <groupId>org.incode.app</groupId>
     <artifactId>contactapp-parent</artifactId>
     <version>0.1.0-SNAPSHOT</version>
+
+    <name>Incode ContactApp (Parent)</name>
+
     <packaging>pom</packaging>
 
     <modules>
