required updates to integ tests as per ISIS-1427 refactorings

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 
     <packaging>pom</packaging>
 
+    <name>Incode ContactApp (Root)</name>
+
     <modules>
         <module>backend</module>
     </modules>
