ELI-131: Removed Isis WebServer dependency, so that the contactapp works on the tomcat docker container straight out of the box

--- a/backend/dom/pom.xml
+++ b/backend/dom/pom.xml
@@ -57,10 +57,10 @@
             <artifactId>isis-core-schema</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.isis.core</groupId>
-            <artifactId>isis-core-webserver</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.isis.core</groupId>-->
+            <!--<artifactId>isis-core-webserver</artifactId>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.apache.isis.core</groupId>
