--- a/backend/fixture/pom.xml
+++ b/backend/fixture/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.incode.app</groupId>
         <artifactId>contactapp</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>contactapp-fixture</artifactId>
