--- a/backend/webapp/pom.xml
+++ b/backend/webapp/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <artifactId>contactapp-webapp</artifactId>
-    <name>Incode ContactApp Webapp</name>
+    <name>Incode App ContactApp Webapp</name>
 
     <description>This module runs both the Wicket viewer and the Restfulobjects viewer in a single webapp configured to run using the datanucleus object store.  It combines a number of the Isis addons.</description>
 
