--- a/backend/dom/pom.xml
+++ b/backend/dom/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <artifactId>contactapp-dom</artifactId>
-    <name>Incode ContactApp DOM</name>
+    <name>Incode App ContactApp DOM</name>
 
     <build>
         <resources>
