--- a/backend/fixture/pom.xml
+++ b/backend/fixture/pom.xml
@@ -26,7 +26,7 @@
     </parent>
 
     <artifactId>contactapp-fixture</artifactId>
-    <name>Incode ContactApp Fixtures</name>
+    <name>Incode App ContactApp Fixtures</name>
 
     <build>
         <resources>
