--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>contactapp</artifactId>
     <version>1.1.0</version>
 
-    <name>Incode ContactApp</name>
+    <name>Incode App ContactApp</name>
 
     <packaging>pom</packaging>
 
