--- a/backend/integtests/pom.xml
+++ b/backend/integtests/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.incode.app</groupId>
         <artifactId>contactapp</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>contactapp-integtests</artifactId>
@@ -45,6 +45,30 @@
                 </excludes>
             </testResource>
         </testResources>
+        <plugins>
+            <plugin>
+                <groupId>com.github.odavid.maven.plugins</groupId>
+                <artifactId>mixin-maven-plugin</artifactId>
+                <version>0.1-alpha-39</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <mixins>
+                        <mixin>
+                            <groupId>com.danhaywood.mavenmixin</groupId>
+                            <artifactId>standard</artifactId>
+                            <version>${mavenmixin-standard.version}</version>
+                        </mixin>
+                        <mixin>
+                            <groupId>com.danhaywood.mavenmixin</groupId>
+                            <artifactId>surefire</artifactId>
+                            <version>${mavenmixin-surefire.version}</version>
+                        </mixin>
+                    </mixins>
+                </configuration>
+            </plugin>
+
+        </plugins>
+
     </build>
 
     <dependencies>
@@ -55,28 +79,15 @@
             <artifactId>contactapp-app</artifactId>
         </dependency>
 
+        <!-- test -->
         <dependency>
-            <groupId>org.apache.isis.core</groupId>
-            <artifactId>isis-core-unittestsupport</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.isis.core</groupId>
-            <artifactId>isis-core-integtestsupport</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.isis.core</groupId>
-            <artifactId>isis-core-specsupport</artifactId>
+            <groupId>org.apache.isis.mavendeps</groupId>
+            <artifactId>isis-mavendeps-testing</artifactId>
+            <type>pom</type>
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-
+<!--
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
@@ -86,108 +97,15 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
         </dependency>
+-->
+
+        <dependency>
+            <groupId>org.togglz</groupId>
+            <artifactId>togglz-junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
-
-
-    <profiles>
-        <profile>
-            <id>isisaddons-module-togglz</id>
-            <activation>
-                <property>
-                    <name>!skip.isisaddons-module-togglz</name>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.togglz</groupId>
-                    <artifactId>togglz-junit</artifactId>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-
-        <profile>
-            <id>cucumber</id>
-            <!-- enable for enhanced cucumber-jvm reporting
-            http://www.masterthought.net/section/cucumber-reporting -->
-            <activation>
-                <property>
-                    <name>cucumber</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <testFailureIgnore>true</testFailureIgnore>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>net.masterthought</groupId>
-                        <artifactId>maven-cucumber-reporting</artifactId>
-                        <version>0.0.4</version>
-                        <executions>
-                            <execution>
-                                <id>execution</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>generate</goal>
-                                </goals>
-                                <configuration>
-                                    <projectName>cucumber-jvm-example</projectName>
-                                    <outputDirectory>${project.build.directory}/cucumber-reports</outputDirectory>
-                                    <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
-                                    <enableFlashCharts>false</enableFlashCharts>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-            <dependencies>
-                <dependency>
-                    <groupId>com.googlecode.totallylazy</groupId>
-                    <artifactId>totallylazy</artifactId>
-                    <version>991</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>net.masterthought</groupId>
-                    <artifactId>cucumber-reporting</artifactId>
-                    <version>0.0.21</version>
-                </dependency>
-                <dependency>
-                    <groupId>net.masterthought</groupId>
-                    <artifactId>maven-cucumber-reporting</artifactId>
-                    <version>0.0.4</version>
-                </dependency>
-            </dependencies>
-
-            <repositories>
-                <repository>
-                    <id>repo.bodar.com</id>
-                    <url>http://repo.bodar.com</url>
-                </repository>
-            </repositories>
-
-        </profile>
-
-        <profile>
-            <id>m2e</id>
-            <activation>
-                <property>
-                    <name>m2e.version</name>
-                </property>
-            </activation>
-            <build>
-                <directory>target-ide</directory>
-            </build>
-        </profile>
-
-    </profiles>
 
 
 </project>
